[project]
name = "agentscope-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope>=1.0.4",
    "agentscope-runtime[agentscope,agno,autogen,langgraph,sandbox]>=0.1.4",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.15.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]


